--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ nav ul li a:hover{
     display: flex;
     position: absolute;
     top: -100px;
-    margin-left: 70px;
+    margin-left: 100px;
     width: 80%;
     justify-content: space-between;
 }
@@ -273,19 +273,21 @@ nav ul li a:hover{
     color: #fff;
 }
 .footer-head h1{
-    margin: 0 20px;
     width: 20%;
-    border-bottom:2px solid #fff;
+    text-decoration: underline;
+    text-underline-offset: 10px;
 }
 .navicons{
     width: 60%;
     display: flex;
 }
 .topicons{
-    margin: 15px 30px 0 30px;
+    margin:  0px 5px 0px 40px;
     padding-left: 80px;
     font-size: 30px !important;
-    transition: all 1s ease;
+}
+span{
+    font-size: 20px;
 }
 .topicons:hover{
     color: #51fe44;
@@ -298,7 +300,7 @@ nav ul li a:hover{
     width: 50%;
 }
 .finput{
-    margin: 25px 10px;
+    margin: 28px 10px;
     width: 90%;
     height: 30px;
     background-color: #141629;
@@ -348,7 +350,7 @@ nav ul li a:hover{
     justify-content: space-between;
 }
 .send{
-    margin: 0 20px;
+    margin: 0px 0px 0px 0px;
     width: 140%;
     height: 53.5px;
     background-color: #fff;
@@ -397,6 +399,7 @@ nav ul li a:hover{
 .border-content:hover h4{
     color: #51fe44;
 }
+
 
 
 
